<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.constraint.Guideline
        android:id="@+id/gl_center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@id/gl_center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="100dp"
        android:textSize="50dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_guest"
        app:layout_constraintBottom_toBottomOf="@id/gl_center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:textSize="20dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_iniciar"
        app:layout_constraintTop_toTopOf="@id/gl_center_horizontal"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="15dp"
        android:paddingVertical="10dp"
        android:onClick="beginOnClick"
        />

</android.support.constraint.ConstraintLayout>